# browser-service

./: .gitmodules  CMakeLists.txt
bs_tests/: CMakeLists.txt  service_tests.cpp
cmake/: ClangFormatBrowserService.cmake
docker/: Dockerfile
service/: CMakeLists.txt
service/include/: rest_api.hpp
service/src/: rest_api.cpp
